[package]
name = "issue231"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys = { version = "0.33.1", default-features = false, features = ["std", "binstart", "native"] }

[build-dependencies]
embuild = { version = "0.31.2", features = ["elf"] }
anyhow = "1"

[package.metadata.esp-idf-sys]
mcu = "esp32c3"
esp_idf_sdkconfig_defaults = "sdkconfig.defaults"
