[package]
name = "issue231"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys = { version = "0.33.1", git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "feature/remote-components", default-features = false, features = ["std", "binstart", "native"] }

[build-dependencies]
embuild = { version = "0.31.2", features = ["elf"] }
anyhow = "1"

[package.metadata.esp-idf-sys]
mcu = "esp32s3"
esp_idf_sdkconfig_defaults = "sdkconfig.defaults"
esp_idf_components = ["espressif_tinyusb_0.15.0_2", "espressif_esp_tinyusb_1.3.1"]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["vendor"]
